--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,7 +14,8 @@ h2{
 h3{
     @apply text-sm font-bold text-[#333333]
 }
+h1{
+    @apply underline decoration-[#00A0E8] animate-slide-in-blurred-left
+}
 
 
-
-  
